tests/expectations/compiler/records/nested_record_1_fail.out
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:10:9
     |
  10 |         foo: Foo,
     |         ^^^
     |
     = Remove the record `test.aleo/Foo` from `Token`.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
